bee-common/bee-common-derive/tests/packable/fail/union.stderr
error: Unions cannot derive `Packable`
  --> $DIR/union.rs:13:11
   |
13 | pub union MaybeInt {
   |           ^^^^^^^^
